<resources>
    <string name="app_name"><![CDATA[2nd H&H Kicker League]]></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_fixture">Fixture</string>
    <string name="nav_table">Table</string>
    <string name="nav_players">Players</string>

    <string name="label_fixture">Fixture</string>
    <string name="label_table">Table</string>
    <string name="label_players">Players</string>

    <string name="tab_day">Day</string>
    <string name="prematch">Prematch</string>
    <string name="start_match">Start Match</string>
    <string name="standings_played">P</string>
    <string name="standings_wins">W</string>
    <string name="standings_overtime_wins">WO</string>
    <string name="standings_overtime_losses">LO</string>
    <string name="standings_losses">L</string>
    <string name="standings_goals_difference">GD</string>
    <string name="standings_points">PTS</string>

    <string-array name="leagues">
        <item>League 1</item>
        <item>League 2</item>
    </string-array>

    <string-array name="standings">
        <item>Brief</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="new_match_dialog_message">Do you really want to start this match?</string>
    <string name="new_match_dialog_positive">Start</string>
    <string name="new_match_dialog_negative">Cancel</string>
    <string name="vs">vs</string>
    <string name="wrong_score">Wrong score</string>
    <string name="first_period">First period</string>
    <string name="second_period">Second period</string>
    <string name="overtime">Overtime</string>
    <string name="cancel_match_dialog_message">Do you really want to stop this match?</string>
    <string name="cancel_match_dialog_positive">Stop</string>
    <string name="match_already_completed">Match already completed</string>
    <string name="day_has_not_started_yet">Day has not started yet</string>
    <string name="network_error">There is an error while loading data</string>
    <string name="refresh">Refresh</string>
    <string name="nav_preferences">Preferences</string>
    <string name="common_preferences">Common</string>
    <string name="pref_title_api_url">Server</string>
    <string name="pref_title_preferred_league">Preferred League</string>
    <string-array name="pref_entries_preferred_league">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_values_preferred_league">
        <item>League 1</item>
        <item>League 2</item>
    </string-array>
</resources>
